<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AprilBrush 1.0.0</string>
    <string name="autor_name">by Vladimir Zarypov</string>
    <string name="icons_credit">icons by www.fatcow.com/free-icons</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear</string>
    <string name="action_color">Color</string>
    <string name="action_brush">Brush</string>

    <string name="color_hue">Hue</string>
    <string name="color_saturation">Saturation</string>
    <string name="color_value">Value</string>

    <string name="brush_size">Size</string>
    <string name="brush_hardness">Hardness</string>
    <string name="brush_spacing">Spacing</string>
    <string name="brush_roundness">Roundness</string>
    <string name="brush_angle">Angle</string>
    <string name="brush_scatter">Scatter</string>
    <string name="brush_opacity">Opacity</string>
    <string name="brush_flow">Flow</string>
    <string name="slider_value">100</string>

    <string name="message_new_picture">"New Picture"</string>
    <string name="message_load_picture">"Picture Loaded"</string>
    <string name="message_save_picture">"Picture Saved"</string>

    <string name="brush_mode">"Brush Mode"</string>
    <string name="eraser_mode">"Eraser Mode"</string>

    <string name="icon_new">"New picture"</string>
    <string name="icon_load">"Load picture"</string>
    <string name="icon_save">"Save picture"</string>
    <string name="icon_help">"Help"</string>
    <string name="icon_undo">"Undo"</string>
    <string name="icon_brush">"Brush/Eraser settings, toggled by long click"</string>
    <string name="icon_color">"Select brush color"</string>
    <string name="icon_fill">"Fill canvas / Select fill color (by long click)"</string>
    <string name="icon_redo">"Redo"</string>

</resources>
