<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_all_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/appNameTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/autor_name"
        android:id="@+id/autorTextView"
        android:layout_below="@+id/appNameTextView"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/autorTextView"
        android:layout_alignParentLeft="true"
        android:src="@drawable/picture_empty"
        android:paddingRight="15dp"
        android:layout_marginBottom="@dimen/help_row_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/icon_new"
        android:id="@+id/newIconTextView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_toRightOf="@+id/imageView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:src="@drawable/picture_add"
        android:layout_marginBottom="@dimen/help_row_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/icon_load"
        android:id="@+id/loadIconTextView"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:src="@drawable/picture_save"
        android:layout_marginBottom="@dimen/help_row_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/icon_save"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentLeft="true"
        android:src="@drawable/help"
        android:layout_marginBottom="@dimen/help_row_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/icon_help"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/help_row_margin"
        android:src="@drawable/arrow_undo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/icon_undo"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:src="@drawable/paintbrush"
        android:layout_below="@+id/imageView5"
        android:layout_alignLeft="@+id/imageView5"
        android:paddingRight="15dp"
        android:layout_marginBottom="@dimen/help_row_margin" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView7"
        android:src="@drawable/draw_eraser"
        android:layout_below="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView6"
        android:paddingRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/icon_brush"
        android:id="@+id/textView6"
        android:layout_alignBottom="@+id/imageView7"
        android:layout_toRightOf="@+id/imageView7" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView8"
        android:layout_below="@+id/imageView6"
        android:layout_alignParentLeft="true"
        android:src="@drawable/palette"
        android:layout_marginBottom="@dimen/help_row_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/icon_color"
        android:id="@+id/textView7"
        android:layout_alignBottom="@+id/imageView8"
        android:layout_toRightOf="@+id/imageView6" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView9"
        android:layout_below="@+id/imageView8"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/help_row_margin"
        android:src="@drawable/paintcan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/icon_fill"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/imageView9"
        android:layout_toRightOf="@+id/imageView6" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView10"
        android:layout_below="@+id/imageView9"
        android:layout_alignParentLeft="true"
        android:src="@drawable/arrow_redo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/icon_redo"
        android:id="@+id/textView9"
        android:layout_alignBottom="@+id/imageView10"
        android:layout_toRightOf="@+id/imageView6" />

</RelativeLayout>