<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:text="@string/color_hue"
        android:id="@+id/hue_textView"
        android:layout_gravity="left|center_vertical"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hue_seekBar"
        android:layout_below="@+id/hue_textView"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/color_saturation"
        android:id="@+id/textView"
        android:layout_below="@+id/hue_seekBar"
        android:layout_alignParentLeft="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sat_seekBar"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/color_value"
        android:id="@+id/value_textView"
        android:layout_below="@+id/sat_seekBar"
        android:layout_alignParentLeft="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/val_seekBar"
        android:layout_below="@+id/value_textView"
        android:layout_alignParentRight="true" />
</RelativeLayout>